feat: (wip) support new rocket recipe in workbench